force-app/main/default/objects/Work_Day__c/Work_Day__c.object-meta.xml
<CustomObject>
    <label>Work Day(Deprecated)</label>
    <nameField>
        <displayFormat>WD-{0000}</displayFormat>
        <label>Work Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>