force-app/main/default/objects/Work_Day__c/fields/Current_Work_Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>Current_Work_Activity_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Work Activity Log</label>
    <referenceTo>Work_Activity_Log__c</referenceTo>
    <relationshipName>Work_Days</relationshipName>
    <type>Lookup</type>
</CustomField>