force-app/main/default/objects/Work_Day__c/fields/Non_work_time_done__c.field-meta.xml
<CustomField>
    <fullName>Non_work_time_done__c</fullName>
    <label>Non work time done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>