force-app/main/default/objects/Work_Day__c/fields/Non_work_time_doneM__c.field-meta.xml
<CustomField>
    <fullName>Non_work_time_doneM__c</fullName>
    <label>Non work time done(sec)</label>
    <summarizedField>Work_Activity_Log__c.DurationFormula__c</summarizedField>
    <summaryFilterItems>
        <field>Work_Activity_Log__c.Work_Type__c</field>
        <operation>equals</operation>
        <value>Non working</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Activity_Log__c.Work_Day__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>