force-app/main/default/objects/Work_Day__c/fields/Scheduled_work_time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_work_time__c</fullName>
    <label>Scheduled work time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>