force-app/main/default/objects/Work_Day__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; +  User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>