force-app/main/default/objects/Work_Day__c/fields/Work_time_done__c.field-meta.xml
<CustomField>
    <fullName>Work_time_done__c</fullName>
    <label>Work time done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>