force-app/main/default/objects/Work_Day__c/fields/Work_Time_Done_M__c.field-meta.xml
<CustomField>
    <fullName>Work_Time_Done_M__c</fullName>
    <label>Work Time Done(sec)</label>
    <summarizedField>Work_Activity_Log__c.DurationFormula__c</summarizedField>
    <summaryFilterItems>
        <field>Work_Activity_Log__c.Work_Type__c</field>
        <operation>equals</operation>
        <value>Working</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Activity_Log__c.Work_Day__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>